# diviga_atmos-public

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build&sync.sh  build_and_push.sh  config.toml  dht.py
atmos_control/: README.md  pubspec.yaml
atmos_control/android/app/: build.gradle
atmos_control/android/app/src/main/: AndroidManifest.xml
atmos_control/ios/Runner/: Info.plist
atmos_control/ios/Runner.xcodeproj/: project.pbxproj
atmos_control/lib/: main.dart
atmos_control/lib/graph/: atmos_graph.dart
atmos_control/lib/models/: atmos_data.dart
atmos_control/lib/providers/: atmos_provider.dart
atmos_control/lib/screens/: home_screen.dart
atmos_control/lib/services/: atmos_service.dart
atmos_control/lib/widgets/: atmos_graph.dart  relay_card.dart  sensor_card.dart
atmos_control/linux/: my_application.cc
atmos_control/macos/Runner.xcodeproj/: project.pbxproj
atmos_control/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
atmos_control/macos/Runner/Configs/: AppInfo.xcconfig
atmos_control/test/: widget_test.dart
atmos_control/web/: index.html  manifest.json
atmos_control/windows/runner/: Runner.rc  main.cpp
src/: config.rs  email_notification.rs  error.rs  influx_client.rs  initialization.rs  main.rs  mock_relay_ctrl.rs  monitor_atmosphere.rs  read_atmosphere.rs  relay_ctrl.rs  request_atmosphere.rs  shared_data.rs  sqlite_client.rs  ventilation.rs  webserver.rs
src/routes/: atmosphere.rs  heartbeat.rs  index.rs  mod.rs  relay_control.rs  relay_status.rs
templates/: index.html
(+1 files in other folders)
