[package]
name = "atmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.28"
rppal = "0.14.1"
actix-web = "4.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.107"
dotenv = "0.15.0"
config = "0.13"